--- a/KomunikatorSerwer/KomunikatorSerwer.csproj
+++ b/KomunikatorSerwer/KomunikatorSerwer.csproj
@@ -87,6 +87,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="picture with application.png" />
     <Content Include="favicon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
